# deep-insight-analyzer

./: .dockerignore  .env.example  .gitignore  AGENT.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  app.py  config.py  db.py  engine.py  graph.py  main.py  pyproject.toml  report_generator.py  requirements.txt  state.py
agent/: analyzer.py  forecast.py  reporter.py
agents/: analyzer.py  forecaster.py  query_builder.py  retriever.py  reviewer.py
agents/forecaster/: __init__.py  arima.py  forecaster.py  lightgbm.py  moirai.py  tft.py
agents/reporter/: analyst.py  compiler.py  planner.py  strategist.py
common/: state.py
data/: input_crisis_72h.csv  pr_crisis_dataset.csv
deploy/: deploy.sh  setup-aws.sh
docs/TODO/: 법률 RAG.md  시나리오 분기.md
manual/: make_dataset.py  seed_db.py
models/: nvi_forecaster.pkl
models/lightgbm/: nvi_forecaster.pkl
scripts/: generate_embeddings.py  make_graph.py  seed_starbucks_data.py  train_model.py  train_tft.py
sql/: 001_create_tables.sql  002_add_doc_tone.sql  002_alter_hourly_snapshots.sql
tests/agents/: test_query_builder.py  test_retriever.py
tests/e2e/: test_analyzer_e2e.py
